# Java_Projects

./: README.md
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/com.genuitec.eclipse.devstyle/: recent.json
.metadata/.plugins/com.genuitec.eclipse.monitor/: myeclipse-usage.properties
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: 1648378187.index  1782611445.index  3405496171.index  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
053019/: .project
053019/src/: lab.java
Control_Flow_Project/: .project
Control_Flow_Project/src/: AsciiChars.java  project.java
Java_Lab/src/: lab.java
Projects/ds/: autogen.sh  configure.ac
Projects/ds/data/: Makefile.am
Projects/ds/src/: Makefile.am  ds-version.h.in  ds.h
lab052419/: .project
lab052419/src/lab052419/: lab.java
lab053119/: .project
lab053119/src/lab053119/: lab.java
lab060319/: .project
lab060319/src/lab060319/: LinkedList.java  ListNode.java
testing/src/testing/: Vehicle.java
testspace/: .project
testspace/src/: arraty.java  car.java
testspace/src/testspace/: HartfordCourse.java  IMovi.java  IMovie.java  JavaCourse.java  Netflix.java  TTS.java  (+2 more)
(+22 files in other folders)
